# dci-bot

./: .gitignore  Cargo.toml  README.md  Requirements  backup.db  event.db  event.sqlite3  run.sh
src/: bot.rs  main.rs  scraper.rs  strings.rs
