[package]
name = "dci-bot"
version = "0.1.0"
authors = ["warren <me@warrenhu.com>"]

[dependencies]
failure = "0.1.1"
reqwest = "0.8.6"
select = "0.4.2"
chrono = "0.4.4"
orca = "0.5.0"
serde_json = "1.0.22"
serde = "1.0.67"
url = "1.7.0"

[dependencies.rusqlite]
version = "0.13.0"
features = ["chrono"]
